welcome.lessons.welcome.loopdowhile.Poucet.scala.error
Poucet:3: error: ')' expected but ';' found.
do(avance();)
           ^Poucet:3: error: 'while' expected but ')' found.
do(avance();)
            ^Poucet:10: error: '(' expected but '}' found.
	}
        ^