welcome.lessons.welcome.loopdowhile.Poucet.scala.code
var compteur = 0
do(avance();)
while(!sortieTrouvee){
	avance();compteur = compteur + 1;
}

